# haystack-rag

./: .env.example  .gitignore  app.py  chainlit.md  ingest.py  pyproject.toml
docs/: architecture.md  roadmap.md
src/: config.py  document_store.py  embeddings.py  guardrails.py  llm.py  pdf_loader.py  rag.py  text_splitter.py  wiki_loader.py
